# StockAnalysis

./: .gitignore  StockAnalysis.py  __init__.py  auth.py  requirements.txt  setup.cfg  setup.py  users.sqlite3
StockAnalysis/: StockAnalysis.py  __init__.py  auth.py  db.py  schema.sql
StockAnalysis/static/: style.css
StockAnalysis/templates/: base.html  index.html  markets.html  research.html  user.html
StockAnalysis/templates/auth/: login.html  register.html
static/: style.css
templates/: base.html  index.html  markets.html  research.html  view.html
